--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -58,3 +58,23 @@
   align-items: center;
   gap: 16px;
 }
+
+/*Skills Section*/
+.skills_article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.skills_list {
+  display: flex;
+  gap: 16px;
+}
+
+.skills_item {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 8px;
+}
+
