--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -116,3 +116,27 @@
   gap: 8px;
 }
 
+/*Projects*/
+.projects_section_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.projects_section_container div {
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
+}
+
+.project_article {
+  display: flex;
+  align-items: center;
+}
+
+.project_article div {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
