--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -133,10 +133,42 @@
 .project_article {
   display: flex;
   align-items: center;
+  gap: 16px; 
 }
 
 .project_article div {
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+/*Contact Section*/
+.contact_article {
+  display: flex;
+  gap: 16px;
+}
+
+.contact_article_form {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.contact_title_text {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.contact_form {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+/*footer*/
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
