--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ body {
 }
 
 .project_article div p {
-  font-weight: 500;
+  font-weight: var(--font-weight-primary);
 }
 
 .project_article div button {
@@ -202,4 +202,67 @@ body {
 .project_article div button:hover {
   background-color: var(--color-border-button);
   color: var(--tertiary-color);
+}
+
+/*Contact Section*/
+.contact_section {
+  width: 100%;
+  background-color: var(--secondary-color);
+}
+
+.contact_article {
+  margin: 64px 152px;
+}
+
+.contact_article img {
+  width: 30%;
+}
+.contact_article_form {
+  width: 70%;
+}
+
+.contact_article_form button {
+  background-color: var(--color-border-button);
+  color: var(--tertiary-color);
+  border: 1px solid var(--color-border-button);
+  width: 112px;
+  height: 51px;
+  cursor: pointer;
+  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+}
+
+.contact_article_form button:hover {
+  background-color: var(--tertiary-color);
+  color: var(--color-border-button);
+}
+
+.contact_form_input {
+  width: 60%;
+  height: 56px;
+  color: var(--color-text);
+  border: 1px solid var(--tertiary-color);
+  border-radius: 4px;
+  
+}
+
+.contact_form_input:focus {
+  border: 1px solid var(--color-border-button);
+  outline: none;
+}
+
+.contact_form_input:hover { 
+  border: 1px solid var(--color-border-button);
+}
+
+.contact_form_input::placeholder {
+  font-weight: 400;
+}
+
+/*Footer*/
+footer {
+  background-color: var(--tertiary-color);
+  width: 100%;
+  height: 102px;
+  text-align: center;
+  font-weight: var(--font-weight-primary);
 }
